# standard-view-fastapi

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  LICENSE.txt  README.md  docker-build.bat  forge.toml  logging.yaml  pyproject.toml
.github/workflows/: build-and-test.yaml  check-formatting.yaml
docker/: Dockerfile  build.bat  run.bat
standard_view_fastapi/: cache.py  config.py  log.py  logger.py  main.py  middleware.py  settings.py  tree.py  validation.py
